# tonic-axum-sqlx

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  buf.gen.yaml  build.rs  clippy.toml  docker-compose.yml  sqlx-data.json
.cargo/: config.toml
.sqlx/: query-12598fb963a3c55030b9890bf93a9086f0f9f599e2587af1797dcfc760114685.json
assets/: index.html  swagger.html
assets/assets/: index.js
examples/: grpc_webclient.rs  ws_chatclient.rs
examples/web/: package-lock.json  vite.config.js
examples/web/sdk/: service_pb.ts
examples/web/sdk/google/api/: http_pb.ts
examples/web/src/: main.ts
migrations/: 20230427214357_setup.sql
proto/: service.proto
scripts/: test_client.py  test_web.html
scripts/web/: index.html  package.json  vite.config.js
scripts/web/sdk/: service_pb.ts
scripts/web/src/: main.ts
src/: axum_tonic_glue.rs  generated.rs  grpc_rest_multiplex.rs  lib.rs  main.rs  routes.rs  utils.rs  websocket.rs
tests/: sample_test.rs
