[package]
name = "tonic-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = { version = "0.9.2" }
pin-project = "1.0.12"
hyper = { version = "0.14.26", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
axum = { version = "0.6.16" }
tonic-web = { version = "0.9.2" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
tonic-build = "0.9"
