[package]
name = "tonic-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = { version = "0.9.2" }
pin-project = "1.0.12"
hyper = { version = "0.14.26", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
axum = { version = "0.6.16", features = ["json"] }
tonic-web = { version = "0.9.2" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio", "postgres", "macros", "json"] }

[build-dependencies]
tonic-build = "0.9"
