[package]
name = "tonic-axum-sqlx"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = { version = "0.9.2" }
hyper = { version = "0.14.26", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
# Tower-http fs provide service for serving static files
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
axum = { version = "0.6.16", features = ["json"] }
# Enable gRPC for the Web
tonic-web = { version = "0.9.2" }
# Serialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
# Database
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "offline"] }
# For multplexing gRPC and rest
futures = "0.3.28"
tonic-reflection = "0.9.2"

[build-dependencies]
tonic-build = "0.9"
